# trustworthy_assistant

./: .env.example  .gitignore  .trustworthy_cli_history  README.md  README.zh.md  app.py  cli.py  config.py  debug.md  prompting.py  pyproject.toml  run_wecom_bot.py  skills.py
.dbg/: minimax_vision_probe.py  mmx_from_env.py  trae-debug-log-vision-read-image.ndjson  trae-debug-log-wechat-quote-dup.ndjson  trae-debug-log-wechat-send.ndjson
.trustworthy_state/: sessions.json  tool_registry_state.json
.wechat_personal/accounts/: 0bbec9eb31a9_im.bot.context_tokens.json  0bbec9eb31a9_im.bot.json  2e982bc33936_im.bot.json  67faf14ddbf8_im.bot.json  96c6cb0c1341_im.bot.context_tokens.json  96c6cb0c1341_im.bot.json
.wechat_personal/sync/: 0bbec9eb31a9_im.bot.txt  96c6cb0c1341_im.bot.txt
docs/: nightly-dream-design.md  reliability-personal-ops-phase1.md
eval/: benchmarks.py
memory/: repository.py  retriever.py  service.py  vector_store.py
providers/: __init__.py
runtime/: __init__.py  sessions.py
skills/minimax-multimodal-toolkit/: SKILL.md
src/trustworthy_assistant/: __init__.py  app.py  bookkeeping.py  bootstrap.py  cli.py  config.py  prompting.py  (+6 more)
supervisor/: models.py  policies.py  workflow.py
tests/: test_nightly_dream.py  test_reliability_personal_ops.py  test_sessions_persistence.py
workspace/: AGENTS.md  BOOTSTRAP.md  CRON.json  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md  cron_state.json  read_cron.py  read_section.py
workspace_template/: AGENTS.md  BOOTSTRAP.md  CRON.json  IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
(+68 files in other folders)
