[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trustworthy-assistant"
version = "0.2.0"
description = "Production-ready AI Agent Gateway with Memory, Streaming, and Multi-Channel Support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.39.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "croniter>=2.0.0",
    "python-telegram-bot>=21.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "chromadb>=0.5.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "qrcode>=7.4.2",
    "cryptography>=42.0.0",
    "pypdf>=6.0.0",
    "python-docx>=1.1.2",
    "openpyxl>=3.1.5",
    "python-pptx>=1.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
trustworthy-cli = "trustworthy_assistant.cli:run"
trustworthy-wecom = "trustworthy_assistant.run_wecom_bot:main"
trustworthy-wechat = "trustworthy_assistant.run_wechat_bot:main"
trustworthy-wechat-login = "trustworthy_assistant.run_wechat_login:main"

[tool.hatch.build.targets.wheel]
packages = ["src/trustworthy_assistant"]
